[package]
name = "jsonrpc-lite"
version = "0.5.0"
authors = ["zensh <admin@zensh.com>"]
description = "JSON-RPC 2.0 Specification serialization for Rust."
documentation = "https://docs.rs/jsonrpc-lite"
homepage = "https://github.com/iorust/jsonrpc-lite"
repository = "https://github.com/iorust/jsonrpc-lite.git"
readme = "README.md"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
