[package]
name = "jsonrpc-lite"
version = "0.6.1"
edition = "2021"
authors = ["zensh <admin@zensh.com>"]
description = "JSON-RPC 2.0 Specification serialization for Rust."
documentation = "https://docs.rs/jsonrpc-lite"
homepage = "https://github.com/iorust/jsonrpc-lite"
repository = "https://github.com/iorust/jsonrpc-lite.git"
readme = "README.md"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
